--- a/webapp/resources/common/css/common.css
+++ b/webapp/resources/common/css/common.css
@@ -54,7 +54,7 @@ span, table{font-size: 0.9em; color: rgba(246, 246, 246, .8);}
 .center{position: relative; width: 80%; left: 10%;}
 
 .input-gray{background: #5E5E5E; color:#C6C6C6; height: 30px; border: 1px solid #646464; border-radius: 2px; vertical-align: bottom; text-indent: 5px;}
-.select-gray{background: #5E5E5E; color:#C6C6C6; height: 30px; border: 1px solid #646464; border-radius: 2px; padding: .25rem .5rem; vertical-align: bottom; }
+.select-gray{background: #4C4C4C; color:#C6C6C6; height: 30px; border: 1px solid #585858; border-radius: 2px; padding: .25rem .5rem; vertical-align: bottom; }
 .btn-gray{background: #4C4C4C; color:#C6C6C6; border: 1px solid #585858; display: inline-block; border-radius: 2px;	text-align: center; white-space: nowrap; vertical-align: bottom; user-select: none; overflow: visible; margin: 0; cursor: pointer; transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out; font-weight:600; padding: .25rem .5rem; height: 30px;}
 .btn-gray:hover{background: #3A3A3A;}
 .btn-gray:active{background: #5E5E5E;}
