--- a/webapp/resources/jsgrid-1.5.3/css/jsgrid.css
+++ b/webapp/resources/jsgrid-1.5.3/css/jsgrid.css
@@ -43,7 +43,8 @@
 
 .jsgrid-table {
     width: 100%;
-    table-layout: fixed;
+    /* table-layout: fixed; */
+    table-layout: auto;    
     border-collapse: collapse;
     border-spacing: 0;
 }
