--- a/webapp/resources/common/css/common.css
+++ b/webapp/resources/common/css/common.css
@@ -9,7 +9,7 @@
 .nsrb{font-family: 'NanumSquareRoundB', serif;}
 
 /* defalut */
-body{background: #363636; font-size: 12px; color: rgba(246, 246, 246, .8);}
+body{background: #363636; font-size: 12px; color: #C6C6C6/* rgba(246, 246, 246, .8) */;}
 span, table{font-size: 0.9em; color: rgba(246, 246, 246, .8);}
 
 
@@ -110,10 +110,7 @@ span, table{font-size: 0.9em; color: rgba(246, 246, 246, .8);}
 .hht4-li{height: 400px; line-height:400px;}
 .hht5-li{height: 500px; line-height:500px;}
 
-.a-brand{
-	color: rgba(246, 246, 246, .8);
-	text-decoration: none; font-weight:700;
-}
+.a-brand{color: rgba(246, 246, 246, .8); text-decoration: none; font-weight:700;}
 
 h1, h2, h3, h4, h5, h6 {margin-top: 0; margin-bottom: 0.5rem;}
 h1, .h1 {font-size: 2.5rem;}
@@ -137,6 +134,27 @@ h6, .h6 {font-size: 1rem;}
 .flex .flex-left{flex: none; margin: 0px 5px 0px 0px;}
 .flex .flex-right{flex: 1;}
 .flex .flex-other{margin: 0px 0px 0px 5px;}
+
+/* color */
+.sync-blue{color:#489CFF !important;}
+.sync-red{color:#FF5A5A !important;}
+.sync-gray{color:#C6C6C6 !important;}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -163,8 +181,6 @@ h6, .h6 {font-size: 1rem;}
 .height-half{height: 50%;}
 .height-full{height: 100%;}
 
-/* span, table{font-size: 11px;}  */   
-/* input[type=date], input[type=time],input[type=text] {font-size: 12px;} */
 .slt-fs{font-size: 12px !important;}
 .span-fs{font-size: 16px !important;}
 .btn-fs{font-size: 16px !important;}
