--- a/webapp/resources/common/css/common.css
+++ b/webapp/resources/common/css/common.css
@@ -138,6 +138,7 @@ h6, .h6 {font-size: 1rem;}
 /* color */
 .sync-blue{color:#489CFF !important;}
 .sync-red{color:#FF5A5A !important;}
+.sync-green{color:#86E57F !important;}
 .sync-gray{color:#C6C6C6 !important;}
 
 
