--- a/webapp/resources/common/css/common.css
+++ b/webapp/resources/common/css/common.css
@@ -158,6 +158,14 @@ h6, .h6 {font-size: 1rem;}
 .jsgrid-pager-nav-button > a:visited{text-decoration:none; color: rgba(246, 246, 246, .8);}
 
 
+.path{
+	display: block;
+	border-bottom: 1px solid #5E5E5E;
+    margin-bottom: 15px;
+    height: 20px;
+}
+
+
 
 
 
