--- a/webapp/resources/common/css/common.css
+++ b/webapp/resources/common/css/common.css
@@ -26,7 +26,7 @@
 .nsrb{font-family: 'NanumSquareRoundB', serif;}
 
 /* defalut */
-body{background: #363636; font-size: 12px; color: #C6C6C6/* rgba(246, 246, 246, .8) */;}
+body{background: #363636; font-size: 12px; color: #C6C6C6; min-width: 1400px;}
 span, table{font-size: 0.9em; color: rgba(246, 246, 246, .8);}
 
 
@@ -87,22 +87,9 @@ span, table{font-size: 0.9em; color: rgba(246, 246, 246, .8);}
 .blank-top{margin-top: 10px;}
 .blank-bottom{margin-bottom: 10px;}
 
-.left-head{	
-	display: table-cell;
-    text-align: center;    
-    vertical-align: middle;
-}
-
-.border-gray{
-	border: 1px solid #585858;
-	padding: 5px 10px 5px 10px;	
-}
-
-.check-item{
-	display: inline-block;
-	white-space: nowrap;
-	margin-right: 20px;
-}
+.left-head{display: table-cell; text-align: center; vertical-align: middle;}
+.border-gray{border: 1px solid #585858; padding: 5px 10px 5px 10px;}
+.check-item{display: inline-block; white-space: nowrap; margin-right: 20px;}
 
 /* size */
 .sm{height: 20px; font-size: 0.1em;}
