--- a/webapp/resources/common/css/common.css
+++ b/webapp/resources/common/css/common.css
@@ -28,6 +28,7 @@
 /* defalut */
 body{background: #363636; font-size: 12px; color: #C6C6C6; min-width: 1400px;}
 span, table{font-size: 0.9em; color: rgba(246, 246, 246, .8);}
+th{height:38px;}
 
 
 .show{display: block;}
@@ -161,7 +162,8 @@ h6, .h6 {font-size: 1rem;}
 }
 
 
-
+.table-head{background: #4C4C4C; border-collapse: collapse; border-spacing: 0;}
+.table-head > th {border-bottom: 0; border-top: 0; border: 1px solid #363636; padding: .5em .5em; text-align: center; border-collapse: collapse; border-spacing: 0;}
 
 
 
@@ -211,7 +213,7 @@ h6, .h6 {font-size: 1rem;}
 
 
 
-td, th{height:38px; vertical-align: middle !important;}
+/* td, th{height:38px; vertical-align: middle !important;} */
 
 #navMenu ul {list-style:none; margin:0; padding:0;}
 #navMenu li {margin: 0 15 0 0; padding: 0 0 0 0; border : 0; float: left;}
