--- a/webapp/resources/common/css/common.css
+++ b/webapp/resources/common/css/common.css
@@ -28,7 +28,7 @@
 /* defalut */
 body{background: #363636; font-size: 12px; color: #C6C6C6; min-width: 1400px;}
 span, table{font-size: 0.9em; color: rgba(246, 246, 246, .8);}
-th{height:38px;}
+th,td{height:38px;}
 
 
 .show{display: block;}
