--- a/webapp/resources/common/css/common.css
+++ b/webapp/resources/common/css/common.css
@@ -72,7 +72,7 @@ th,td{height:38px;}
 .center{position: relative; width: 80%; left: 10%;}
 
 .trs{transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;}
-.input-gray{background: #5E5E5E; color:#C6C6C6; height: 30px; border: 1px solid #646464; border-radius: 2px; vertical-align: bottom; text-indent: 5px;}
+.input-gray{background: #545454;; color:#C6C6C6; font-size: 1em; height: 30px; border: 1px solid #646464; border-radius: 2px; vertical-align: bottom; text-indent: 5px;}
 .select-gray{background: #4C4C4C; color:#C6C6C6; height: 30px; border: 1px solid #585858; border-radius: 2px; padding: .25rem .5rem; vertical-align: bottom; }
 .btn-gray{background: #4C4C4C; color:#C6C6C6; border: 1px solid #585858; display: inline-block; border-radius: 2px;	text-align: center; white-space: nowrap; vertical-align: bottom; user-select: none; overflow: visible; margin: 0; cursor: pointer; font-weight:600; padding: .25rem .5rem; height: 30px;}
 .btn-gray:hover{background: #3A3A3A;}
@@ -102,6 +102,7 @@ th,td{height:38px;}
 .wth4{width: 400px;}
 .wth5{width: 500px;}
 .wth50p{position:relative; width: 50%;}
+.wth80p{position:relative; width: 80%;}
 .wth90p{position:relative; width: 90%;}
 .wth100p{position:relative; width: 100%;}
 
