--- a/webapp/resources/common/css/common.css
+++ b/webapp/resources/common/css/common.css
@@ -171,7 +171,7 @@ h6, .h6 {font-size: 1rem;}
 
 
 .inbk{display: inline-block;}
-
+.pm-mark{font-size: 1.8em; line-height: 30px; margin-right: 6px;}
 
 
 
