--- a/webapp/resources/common/css/common.css
+++ b/webapp/resources/common/css/common.css
@@ -168,10 +168,21 @@ h6, .h6 {font-size: 1rem;}
 
 .table-body{background: #5A5A5A; border-collapse: collapse; border-spacing: 0; width: 100%;}
 .table-body td {border-bottom: 0; border-top: 0; border: 1px solid #363636; padding: .5em .5em; text-align: center; border-collapse: collapse; border-spacing: 0;}
+.table-body tr:hover{ background: #363636;border-color: #363636;border-bottom: 0; border-top: 0; border: 1px solid #363636; padding: .5em .5em; text-align: center; border-collapse: collapse; border-spacing: 0; transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;}
+
+/* jsgrid-selected-row > .jsgrid-cell {
+    background: #363636;
+    border-color: #363636;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+} */
 
 
 .inbk{display: inline-block;}
+
 .pm-mark{font-size: 1.8em; line-height: 30px; margin-right: 6px;}
+
+.dncp{border: 1px solid #9E9E9E;}
+
 
 
 
