--- a/webapp/resources/common/css/common.css
+++ b/webapp/resources/common/css/common.css
@@ -2,6 +2,7 @@
 /*jsGrid ¼³Á¤ */
 .jsgrid-grid-header, .jsgrid-grid-body{overflow: auto;}
 .jsgrid-cell > select { width: 100%; padding: .6em .5em;}
+
 /* jsGrid paging */
 .pager {margin: 10px 0; text-align: center;}
 .pager .jsgrid-pager-current-page {background: #4C4C4C; border: 1px solid #BDBDBD;}
@@ -25,14 +26,24 @@
 @font-face { font-family: 'NanumSquareRoundB'; src: url(../ttf/NanumSquareRoundB.ttf) format('truetype'); }
 .nsrb{font-family: 'NanumSquareRoundB', serif;}
 
+/* font size*/
+.fsize03{font-size: 0.3em;}
+
+/* font color */
+.deepgray{color:#8a8989;}
+
+/* cursor */
+.cs-ptr{cursor:pointer;}
+
 /* defalut */
 body{background: #363636; font-size: 12px; color: #C6C6C6; min-width: 1400px;}
 span, table{font-size: 0.9em; color: rgba(246, 246, 246, .8);}
 th,td{height:38px;}
 
-
+/* display */
 .show{display: block;}
 .hide{display: none;}
+.ilbk{display: inline-block;}
 .blind{position:absolute !important; background:black; background : rgba(0, 0, 0, 0.3);  left:0 !important; top:0 !important; width: 100% !important; height: 100% !important; z-index:8000;}
 
 /* login */
@@ -65,44 +76,53 @@ th,td{height:38px;}
 @-o-keyframes fadeIn{from{opacity:0}to{opacity:.92}}
 @keyframes fadeIn{from{opacity:0}to{opacity:.92}}
 
+/* search bar */
 .search-bar{margin: 0px 0px 5px 0px;}
 
 /* main */
 .main{padding: 10px;}
 .login-center{position: relative; width: 80%; left: 10%;}
 
-.trs{transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;}
-
-.input-center{text-align: center; text-indent: 0px !important;}
-.input-right{text-align: right; text-indent: 0px !important;}
-.input-left{text-align: left; text-indent: 0px !important;}
-
-.input-gray{background: #545454;; color:#C6C6C6; font-size: 1em; height: 30px; border: 1px solid #646464; border-radius: 2px; vertical-align: bottom; text-indent: 5px;}
-.select-gray{background: #4C4C4C; color:#C6C6C6; font-size: 1em; height: 30px; border: 1px solid #585858; border-radius: 2px; padding: .25rem .5rem; vertical-align: bottom; }
+/* button */
 .btn-gray{background: #4C4C4C; color:#C6C6C6; border: 1px solid #585858; display: inline-block; border-radius: 2px;	text-align: center; white-space: nowrap; vertical-align: bottom; user-select: none; overflow: visible; margin: 0; cursor: pointer; font-weight:600; padding: .25rem .5rem; height: 30px;}
 .btn-gray:hover{background: #3A3A3A;}
 .btn-gray:active{background: #5E5E5E;}
 .btn-selected-gray{background: #3A3A3A; border: 1px solid #7A7A7A;}
-.tx-pre{white-space: pre !important;}
+.trs{transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;}
+
+/* input */
+.input-center{text-align: center; text-indent: 0px !important;}
+.input-right{text-align: right; text-indent: 0px !important;}
+.input-left{text-align: left; text-indent: 0px !important;}
+.input-gray{background: #545454;; color:#C6C6C6; font-size: 1em; height: 30px; border: 1px solid #646464; border-radius: 2px; vertical-align: bottom; text-indent: 5px;}
+
+/* select */
+.select-gray{background: #4C4C4C; color:#C6C6C6; font-size: 1em; height: 30px; border: 1px solid #585858; border-radius: 2px; padding: .25rem .5rem; vertical-align: bottom; }
+
+/* textarea */
 .textarea-gray{background: #5E5E5E; color:#C6C6C6; border: 1px solid #646464; resize:none;}
+.tx-pre{white-space: pre !important;}
 .pre-gray{background: #323232; color: rgba(246, 246, 246, .8); border: 1px solid #585858; font-size: 13px; overflow: auto; }
 
+/* span */
 .span-gray{background: #363636; padding: 6px 10px 7px 10px; line-height: 30px; border-radius: 1px; border: 1px solid #585858; vertical-align: bottom;}
 .span-gray-rt{background: #363636; padding: 6px 10px 7px 10px; line-height: 30px; border-radius: 1px; border: 1px solid #585858; margin-right: -6px; vertical-align: bottom;}
 .span-gray-block{background: #363636; display: block; padding: 6px 10px 7px 10px; border-radius: 1px; border: 1px solid #585858; vertical-align: bottom;}
 
-.blank{margin-top: 10px; margin-bottom: 10px;}
-.blank-top{margin-top: 10px;}
-.blank-bottom{margin-bottom: 10px;}
+/* table */
+.table-header{background: #4C4C4C; border-collapse: collapse; border-spacing: 0; width: 100%;}
+.table-header th {border-bottom: 0; border-top: 0; border: 1px solid #363636; padding: .5em .5em; text-align: center; border-collapse: collapse; border-spacing: 0;}
 
-.left-head{display: table-cell; text-align: center; vertical-align: middle;}
-.border-gray{border: 1px solid #585858; padding: 5px 10px 5px 10px;}
-.check-item{display: inline-block; white-space: nowrap; margin-right: 20px;}
+.table-body{background: #5A5A5A; border-collapse: collapse; border-spacing: 0; width: 100%;}
+.table-body td {border-bottom: 0; border-top: 0; border: 1px solid #363636; padding: .5em .5em; text-align: center; border-collapse: collapse; border-spacing: 0;}
+.table-body tr:hover{ background: #363636;border-color: #363636;border-bottom: 0; border-top: 0; border: 1px solid #363636; padding: .5em .5em; text-align: center; border-collapse: collapse; border-spacing: 0; transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;}
+
 
 /* size */
 .sm{height: 20px; font-size: 0.1em;}
 .lg{height: 40px; font-size: 1.7em;}
 
+/* width */
 .wth1{width: 100px;}
 .wth2{width: 200px;}
 .wth3{width: 300px;}
@@ -110,29 +130,35 @@ th,td{height:38px;}
 .wth5{width: 500px;}
 .wth10p{position:relative; width: 10%;}
 .wth50p{position:relative; width: 50%;}
+.wth70p{position:relative; width: 70%;}
 .wth80p{position:relative; width: 80%;}
-.wth89p{position:relative; width: 89%;}
 .wth90p{position:relative; width: 90%;}
 .wth100p{position:relative; width: 100%;}
 
+/* height */
+.mhht05{min-height: 50px;}
 .hht1{height: 100px;}
 .hht2{height: 200px;}
 .hht3{height: 300px;}
 .hht4{height: 400px;}
 .hht5{height: 500px;}
-.hht50p{position:relative; width: 50%;}
-.hht80p{position:relative; width: 80%;}
-.hht90p{position:relative; width: 90%;}
-.hht100p{position:relative; width: 100%;}
-
+.hht50p{position:relative; height: 50%;}
+.hht80p{position:relative; height: 80%;}
+.hht90p{position:relative; height: 90%;}
+.hht100p{position:relative; height: 100%;}
 .hht1-li{height: 100px; line-height:100px;}
 .hht2-li{height: 200px; line-height:200px;}
 .hht3-li{height: 300px; line-height:300px;}
 .hht4-li{height: 400px; line-height:400px;}
 .hht5-li{height: 500px; line-height:500px;}
 
-.a-brand{color: rgba(246, 246, 246, .8); text-decoration: none; font-weight:700;}
+/* color */
+.sync-blue{color:#489CFF !important;}
+.sync-red{color:#FF5A5A !important;}
+.sync-green{color:#86E57F !important;}
+.sync-gray{color:#C6C6C6 !important;}
 
+/* h tag */
 h1, h2, h3, h4, h5, h6 {margin-top: 0; margin-bottom: 0.5rem;}
 h1, .h1 {font-size: 2.5rem;}
 h2, .h2 {font-size: 2rem;}
@@ -141,36 +167,17 @@ h4, .h4 {font-size: 1.5rem;}
 h5, .h5 {font-size: 1.25rem;}
 h6, .h6 {font-size: 1rem;}
 
-
-/* .btn-sm{background: #4C4C4C; color:#C6C6C6; height: 20px; border: 1px solid #585858; border-radius: 2px; cursor: pointer;}
-.btn-sm:hover{background: #3A3A3A;}
-.btn-md{background: #4C4C4C; color:#C6C6C6; height: 30px; border: 1px solid #585858; border-radius: 2px; cursor: pointer;}
-.btn-md:hover{background: #3A3A3A;}
-.btn-lg{background: #4C4C4C; color:#C6C6C6; height: 40px; border: 1px solid #585858; border-radius: 2px; cursor: pointer;}
-.btn-lg:hover{background: #4C4C4C;} */
-
+/* float */
 .pull-right{float: right !important;}
 .pull-left{float: left !important;}
 
+/* flex */
 .flex{display: flex; align-items:center; margin-bottom: 5px;}
 .flex .flex-left{flex: none; margin: 0px 5px 0px 0px;}
 .flex .flex-right{flex: 1;}
 .flex .flex-other{margin: 0px 0px 0px 5px;}
 
-/* color */
-.sync-blue{color:#489CFF !important;}
-.sync-red{color:#FF5A5A !important;}
-.sync-green{color:#86E57F !important;}
-.sync-gray{color:#C6C6C6 !important;}
-
-.path{
-	display: block;
-	border-bottom: 1px solid #5E5E5E;
-    margin-bottom: 15px;
-    height: 20px;
-}
-
-
+/* scroll */
 .overflow-x-scroll{	overflow-x:scroll;}
 .overflow-x-scroll::-webkit-scrollbar {border: 1px solid #363636;}
 .overflow-x-scroll::-webkit-scrollbar-button:start:decrement,::-webkit-scrollbar-button:end:increment {display: none;}
@@ -184,30 +191,33 @@ h6, .h6 {font-size: 1rem;}
 .gray-scroll::-webkit-scrollbar-thumb {background: #4C4C4C;}
 .gray-scroll::-webkit-scrollbar-corner{background: #4C4C4C;}
 
+/* comment */
+.comment-content{min-height:50px; display: inline-block; background: #5A5A5A; text-indent: 3px; padding-top: 2px; white-space: pre;}
 
+/* margin */
+.mgupdown5{margin-top:5px; margin-bottom:5px;}
 
+/* padding */
+.pdall1{padding: 1px;}
 
+/*  */
+.blank{margin-top: 10px; margin-bottom: 10px;}
+.blank-top{margin-top: 10px;}
+.blank-bottom{margin-bottom: 10px;}
 
-.table-header{background: #4C4C4C; border-collapse: collapse; border-spacing: 0; width: 100%;}
-.table-header th {border-bottom: 0; border-top: 0; border: 1px solid #363636; padding: .5em .5em; text-align: center; border-collapse: collapse; border-spacing: 0;}
+.left-head{display: table-cell; text-align: center; vertical-align: middle;}
+.border-gray{border: 1px solid #585858; padding: 5px 10px 5px 10px;}
+.check-item{display: inline-block; white-space: nowrap; margin-right: 20px;}
 
-.table-body{background: #5A5A5A; border-collapse: collapse; border-spacing: 0; width: 100%;}
-.table-body td {border-bottom: 0; border-top: 0; border: 1px solid #363636; padding: .5em .5em; text-align: center; border-collapse: collapse; border-spacing: 0;}
-.table-body tr:hover{ background: #363636;border-color: #363636;border-bottom: 0; border-top: 0; border: 1px solid #363636; padding: .5em .5em; text-align: center; border-collapse: collapse; border-spacing: 0; transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;}
+.a-brand{color: rgba(246, 246, 246, .8); text-decoration: none; font-weight:700;}
 
-/* jsgrid-selected-row > .jsgrid-cell {
-    background: #363636;
-    border-color: #363636;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-} */
+.text-drag-block{-ms-user-select: none; -moz-user-select: -moz-none; -khtml-user-select: none; -webkit-user-select: none; user-select: none;}
 
-
-.text-drag-block{
-	-ms-user-select: none; 
-   -moz-user-select: -moz-none;
-   -khtml-user-select: none;
-   -webkit-user-select: none;
-   user-select: none;
+.path{
+	display: block;
+	border-bottom: 1px solid #5E5E5E;
+    margin-bottom: 15px;
+    height: 20px;
 }
 
 .inbk{display: inline-block;}
@@ -215,12 +225,6 @@ h6, .h6 {font-size: 1rem;}
 .pm-mark{font-size: 1.8em; line-height: 30px; margin-right: 6px;}
 
 .dncp{border: 1px solid #9E9E9E;}
-
-
-
-
-
-
 
 
 
