--- a/webapp/resources/cAdjust/css/cAdjust.css
+++ b/webapp/resources/cAdjust/css/cAdjust.css
@@ -11,3 +11,4 @@
 .xml-tagArea{color:#A7EC24; font-size:inherit;}
 .xml-equal{color:#52CA11; font-size:inherit;}
 .xml-quotation{color:#17C6A3; font-size:inherit;}
+.xml-cdataText{color:#93BDE8; font-size:inherit;}
