--- a/webapp/resources/common/css/common.css
+++ b/webapp/resources/common/css/common.css
@@ -88,7 +88,15 @@ th,td{height:38px;}
 .btn-gray:hover{background: #3A3A3A;}
 .btn-gray:active{background: #5E5E5E;}
 .btn-selected-gray{background: #3A3A3A; border: 1px solid #7A7A7A;}
+.btn-gray-icon{background: #4C4C4C; color:#C6C6C6; border: 1px solid #585858; display: inline-block; border-radius: 2px;	text-align: center; white-space: nowrap; vertical-align: bottom; user-select: none; overflow: visible; margin: 0; cursor: pointer; font-weight:600; width:30px; height: 30px; font-size: 1.4em;}
+.btn-gray-icon:hover{background: #3A3A3A;}
+.btn-gray-icon:active{background: #5E5E5E;}
+.btn-gray-icon-rfh{background: #4C4C4C;  background-image:url("../svg/sync-alt-solid.svg"); width:30px; height: 30px; background-size: 70%; background-repeat: no-repeat; background-position: center; border: 1px solid #585858; display: inline-block; border-radius: 2px; cursor: pointer;}
+.btn-gray-icon-rfh:hover{background: #3A3A3A; background-image:url("../svg/sync-alt-solid.svg"); background-size: 70%; background-repeat: no-repeat; background-position: center;}
+.btn-gray-icon-rfh:active{background: #5E5E5E; background-image:url("../svg/sync-alt-solid.svg"); background-size: 70%; background-repeat: no-repeat; background-position: center;}
+.btn-gray-rfh:active{background: #5E5E5E; background-image:url("../svg/sync-alt-solid.svg"); background-size: 70%; background-repeat: no-repeat; background-position: center;}
 .trs{transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;}
+
 
 /* input */
 .input-center{text-align: center; text-indent: 0px !important;}
@@ -196,9 +204,13 @@ h6, .h6 {font-size: 1rem;}
 
 /* margin */
 .mgupdown5{margin-top:5px; margin-bottom:5px;}
+.mgbottom3{margin-bottom:3px;}
 
 /* padding */
 .pdall1{padding: 1px;}
+
+
+
 
 /*  */
 .blank{margin-top: 10px; margin-bottom: 10px;}
@@ -208,6 +220,12 @@ h6, .h6 {font-size: 1rem;}
 .left-head{display: table-cell; text-align: center; vertical-align: middle;}
 .border-gray{border: 1px solid #585858; padding: 5px 10px 5px 10px;}
 .check-item{display: inline-block; white-space: nowrap; margin-right: 20px;}
+
+
+
+
+
+
 
 .a-brand{color: rgba(246, 246, 246, .8); text-decoration: none; font-weight:700;}
 
