--- a/webapp/resources/common/css/common.css
+++ b/webapp/resources/common/css/common.css
@@ -205,11 +205,12 @@ h6, .h6 {font-size: 1rem;}
 /* margin */
 .mgupdown5{margin-top:5px; margin-bottom:5px;}
 .mgbottom3{margin-bottom:3px;}
+.mgbottom30{margin-bottom:30px;}
 
 /* padding */
 .pdall1{padding: 1px;}
 
-
+.dialog-sm{position: absolute; width: 500px; height: 500px;}
 
 
 /*  */
