--- a/webapp/resources/common/css/common.css
+++ b/webapp/resources/common/css/common.css
@@ -85,9 +85,10 @@ span, table{font-size: 0.9em; color: rgba(246, 246, 246, .8);}
 @keyframes fadeIn{from{opacity:0}to{opacity:.92}}
 
 /*bar*/
-.search-bar{margin: 0px 0px 5px 0px;}
-.button-bar{height: 20px;}
-.button-bar div{margin: 0px 0px 2px 0px; float: right;}
+.search-bar{margin: 5px 0px 5px 0px; background: #3f3f3f; border: 2px solid #323232; padding: 5px 5px 5px 5px;}
+.search-th{background:#4a4a4a;}
+.button-bar{height: 20px; margin-top:-20px;}
+.button-bar div{margin-bottom: 2px; float: right;}
 
 /* main */
 .main{padding: 10px;}
@@ -116,7 +117,7 @@ span, table{font-size: 0.9em; color: rgba(246, 246, 246, .8);}
 .input-center{text-align: center; text-indent: 0px !important;}
 .input-right{text-align: right; text-indent: 0px !important;}
 .input-left{text-align: left; text-indent: 0px !important;}
-.input-gray{background: #545454;; color:#C6C6C6; font-size: 1em; height: 30px; border: 1px solid #646464; border-radius: 2px; vertical-align: bottom; text-indent: 5px;}
+.input-gray{background: #545454; color:#C6C6C6; font-size: 1em; height: 30px; border: 1px solid #646464; border-radius: 2px; vertical-align: bottom; text-indent: 5px;}
 
 /* select */
 .select-gray{background: #4C4C4C; color:#C6C6C6; font-size: 1em; height: 30px; border: 1px solid #585858; border-radius: 2px; padding: .25rem .5rem; vertical-align: bottom; }
