--- a/webapp/resources/common/css/common.css
+++ b/webapp/resources/common/css/common.css
@@ -118,10 +118,10 @@ span, table{font-size: 0.9em; color: rgba(246, 246, 246, .8);}
 .input-center{text-align: center; text-indent: 0px !important;}
 .input-right{text-align: right; text-indent: 0px !important;}
 .input-left{text-align: left; text-indent: 0px !important;}
-.input-gray{background: #545454; color:#C6C6C6; font-size: 1em; height: 30px; border: 1px solid #646464; border-radius: 2px; vertical-align: bottom; text-indent: 5px;}
+.input-gray{background: #4e4e4e; color:#C6C6C6; font-size: 1em; height: 30px; border: 1px solid #646464; border-radius: 2px; vertical-align: bottom; text-indent: 5px;}
 
 /* select */
-.select-gray{background: #4C4C4C; color:#C6C6C6; font-size: 1em; height: 30px; border: 1px solid #585858; border-radius: 2px; padding: .25rem .5rem; vertical-align: bottom; }
+.select-gray{background: #4e4e4e; color:#C6C6C6; font-size: 1em; height: 30px; border: 1px solid #585858; border-radius: 2px; padding: .25rem .5rem; vertical-align: bottom; }
 
 /* textarea */
 .textarea-gray{background: #5E5E5E; color:#C6C6C6; border: 1px solid #646464; resize:none;}
