--- a/webapp/resources/wVali/css/wVali.css
+++ b/webapp/resources/wVali/css/wVali.css
@@ -15,3 +15,16 @@
     z-index: 7999;
 
 }
+
+.wVali-tooltip{
+	position: absolute;
+    background-color: rgba(0, 0, 0, 0.7);
+    padding: 8px;
+    color: rgba(246, 246, 246, .8);
+    box-shadow: 0 3px 15px rgba(0,0,0,.75);
+    animation: fadeIn 0.36s ease-in;    
+    border-radius: 4px;    
+    font-size: 1.3em;
+    z-index: 7999;
+
+}
