--- a/webapp/resources/common/css/common.css
+++ b/webapp/resources/common/css/common.css
@@ -44,7 +44,7 @@
 .cs-ptr{cursor:pointer;}
 
 /* defalut */
-body{background: #363636; font-size: 12px; color: #C6C6C6; min-width: 1400px;}
+.body{background: #363636; font-size: 12px; color: #C6C6C6; min-width: 1400px; max-width: 1650px; margin-left: auto; margin-right: auto;}
 span, table{font-size: 0.9em; color: rgba(246, 246, 246, .8);}
 /* .th, .td{height:38px;} */
 
@@ -87,8 +87,11 @@ span, table{font-size: 0.9em; color: rgba(246, 246, 246, .8);}
 /*bar*/
 .search-bar{margin-bottom: 5px; background: #3f3f3f; border: 2px solid #323232; padding: 2px 2px 2px 2px;}
 .search-th{background:#4a4a4a;}
+.search-bar .btn-right{margin-bottom: 2px; float: right;}
+.search-bar .btn-left{margin-bottom: 2px; margin-right: 3px; float: left;}
+
 .button-bar{height: 20px; margin-top:-20px; margin-bottom: 5px;}
-.button-bar .btn-right{margin-bottom: 2px; margin-right: 3px; float: right; padding-top: 15px;}
+.button-bar .btn-right{margin-bottom: 2px; float: right; padding-top: 15px;}
 .button-bar .btn-left{margin-bottom: 2px; margin-right: 3px; float: left; padding-top: 15px;}
 
 /* main */
