--- a/webapp/resources/wGrid/css/wGrid.css
+++ b/webapp/resources/wGrid/css/wGrid.css
@@ -2,6 +2,7 @@
 .wgrid-table-header th {border-bottom: 0; border-top: 0; border: 1px solid #363636; padding: .5em .5em; text-align: center; border-collapse: collapse; border-spacing: 0; height: 35px;}
 
 .wgrid-table-body{background: #5A5A5A; border-collapse: collapse; border-spacing: 0; width: 100%; font-size: 0.9em;  color: rgba(246, 246, 246, .8);}
+.wgrid-table-body span{font-size: 1em;}
 .wgrid-table-body td {border-bottom: 0; border-top: 0; border: 1px solid #363636; padding: .5em .5em; text-align: center; border-collapse: collapse; border-spacing: 0; height: 35px;}
 .wgrid-table-body tr:hover{ background: #363636;border-color: #363636;border-bottom: 0; border-top: 0; border: 1px solid #363636; padding: .5em .5em; text-align: center; border-collapse: collapse; border-spacing: 0; transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;}
 
