--- a/webapp/resources/wGrid/css/wGrid.css
+++ b/webapp/resources/wGrid/css/wGrid.css
@@ -20,18 +20,11 @@
 .wgrid-insert-tr{background: #54794f;}
 .wgrid-insert-tag{background: #41583e;}
 
-
-/* .wgrid-head-overflow-y{overflow-y:scroll;}
-.wgrid-head-overflow-y::-webkit-scrollbar {border: 1px solid #363636; width: 8px;}
-.wgrid-head-overflow-y::-webkit-scrollbar-button:start:decrement,::-webkit-scrollbar-button:end:increment {display: none;}
-.wgrid-head-overflow-y::-webkit-scrollbar-track {background: #4C4C4C;}
-.wgrid-head-overflow-y::-webkit-scrollbar-thumb {background: #4C4C4C;}
-.wgrid-head-overflow-y::-webkit-scrollbar-corner{background: #4C4C4C;} */
-
-.wgrid-overflow-y{overflow-y:scroll;}
-.wgrid-overflow-y::-webkit-scrollbar {border: 1px solid #363636; width: 8px;}
+.wgrid-overflow-y{overflow-y:overlay;}
+.wgrid-overflow-y::-webkit-scrollbar {border: 1px solid #363636; width: 13px;}
 .wgrid-overflow-y::-webkit-scrollbar-button:start:decrement,::-webkit-scrollbar-button:end:increment {display: none;}
 .wgrid-overflow-y::-webkit-scrollbar-track {background: #5A5A5A;}
 .wgrid-overflow-y::-webkit-scrollbar-thumb {background: #4C4C4C;}
 .wgrid-overflow-y::-webkit-scrollbar-corner{background: #4C4C4C;}
+.wgrid-overflow-y-border{border-bottom-color: #5A5A5A !important;}
 
