--- a/webapp/resources/wGrid/css/wGrid.css
+++ b/webapp/resources/wGrid/css/wGrid.css
@@ -26,3 +26,5 @@
 .wgrid-overflow-y::-webkit-scrollbar-thumb {background: #4C4C4C;}
 .wgrid-overflow-y::-webkit-scrollbar-corner{background: #4C4C4C;}
 
+.wgrid-tooltip-input-border{border-color: #FFF !important; background: #363636 !important; animation: fadeIn 0.26s ease-in;}
+.wgrid-tooltip{position: absolute; background-color: rgba(0, 0, 0, 0.7); padding: 8px; color: rgba(246, 246, 246, .8); box-shadow: 0 3px 15px rgba(0,0,0,.75); animation: fadeIn 0.36s ease-in; border-radius: 4px; font-size: 1.3em; z-index: 7999;}
