--- a/webapp/resources/wGrid/css/wGrid.css
+++ b/webapp/resources/wGrid/css/wGrid.css
@@ -8,7 +8,7 @@
 .wgrid-input{background: #4e4e4e; color:#C6C6C6; font-size: 1em; height: 30px; border: 1px solid #646464; border-radius: 2px; vertical-align: bottom; text-indent: 5px; width: 100%; padding-right: 5px;}
 .wgrid-haed-select{background: #4e4e4e; color: rgba(246, 246, 246, .8); font-size: 0.8em; width:90%; border: 1px solid #828282; border-radius: 2px; padding: .25rem .5rem; vertical-align: bottom; }
 .wgrid-select{background: #4e4e4e; color:#C6C6C6; font-size: 1em; height: 30px; border: 1px solid #585858; border-radius: 2px; padding: .25rem .5rem; vertical-align: bottom; width: 100%;}
-
+.wgrid-select:disabled{background: #4e4e4e; color:#777777;; font-size: 1em; height: 30px; border: 1px solid #585858; border-radius: 2px; padding: .25rem .5rem; vertical-align: bottom; width: 100%;}
 
 .wgrid-btn{background: #4C4C4C; color:#C6C6C6; border: 1px solid #585858; display: inline-block; border-radius: 2px;	text-align: center; white-space: nowrap; vertical-align: bottom; user-select: none; overflow: visible; margin: 0; cursor: pointer; font-weight:600; padding: .25rem .5rem; height: 30px;}
 .wgrid-btn:hover{background: #3A3A3A;}
