--- a/webapp/resources/common/css/common.css
+++ b/webapp/resources/common/css/common.css
@@ -156,6 +156,7 @@ span, table{font-size: 0.9em; color: rgba(246, 246, 246, .8);}
 .wth4{width: 400px !important;}
 .wth5{width: 500px !important;}
 .wth10p{position:relative; width: 10% !important;}
+.wth20p{position:relative; width: 20% !important;}
 .wth50p{position:relative; width: 50% !important;}
 .wth70p{position:relative; width: 70% !important;}
 .wth80p{position:relative; width: 80% !important;}
