--- a/webapp/resources/wGrid/css/wGrid.css
+++ b/webapp/resources/wGrid/css/wGrid.css
@@ -15,7 +15,7 @@
 .wgrid-btn:active{background: #5E5E5E;}
 
 .wgrid-delete-tr{background: #795757 !important;}
-.wgrid-delete-tag{background: #654A4A !important;}
+.wgrid-delete-tag{background: #654A4A !important; pointer-events: none; color: #777777 !important;}
 .wgrid-delete-tag:disabled{background: #654A4A !important;}
 .wgrid-update-tr{background: #5A607D;}
 .wgrid-update-tag{background: #535473;}
